# sandbox

./: .coveragerc  .dockerignore  .gitignore  .trivyignore  Dockerfile  SECURITY.md  create-cluster.sh  default.nix  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  scrach.py  sonar-project.properties
.clusterfuzzlite/: .dockerignore  Dockerfile  build.sh
.github/: renovate.json
.github/workflows/: cd.yml  cflite_pr.yml  ci.yml  codeql.yml  renovate.yml  scorecard.yml
k8s/: hivebox-deploy.yaml  kind-config.yaml  nginx-deploy.yaml
src/: main.py
src/hivebox/: __init__.py  cache.py  config.py  metrics.py  store.py  temperature.py
src/tests/: test_main.py
src/tests/fixtures/: cache_fixtures.py  temperature_fixtures.py
src/tests/fuzz/: avg_data_fuzzer.py  temperature_parser_fuzzer.py  temperature_status_fuzzer.py
src/tests/integration/: test_api.py
src/tests/unit/: test_cache.py  test_lifespan.py  test_temperature.py
