[project]
name = "hivebox"
dynamic = ["version"]
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "pydantic-settings>=2.9.0,<2.10.0",
    "uvicorn>=0.34.0,<0.35.0",
    "requests>=2.32.3,<2.33.0",
    "httpx>=0.28.1,<0.29.0",
    "exceptiongroup>=1.2.2,<1.3.0",
    "prometheus-client>=0.21.1,<0.22.0",
    "redis>=6.1.0,<6.2.0",
    "async-timeout>=4.0.0,<4.1.0",
    "aioboto3>=14.3.0,<14.4.0",
    "apscheduler>=3.11.0,<3.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4,<8.4.0",
    "pylint>=3.3.3,<3.4.0",
    "pytest-mock>=3.14.0,<3.15.0",
    "pytest-asyncio>=0.26.0,<0.27.0",
    "atheris>=2.3.0,<2.4.0",
    "coverage>=7.8.0,<7.9.0"
]

[tool.hatch.version]
path = "src/hivebox/__init__.py"
